[package]
name = "caniprint"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.13.0"
futures = "0.3.30"
chrono = "0.4"
reqwest = { version = "0.12.7", features = ["charset", "rustls-tls"] }
scraper = "0.20.0"
# The latest 0.13.0 version often fails with stack overflow.
# See details here: https://github.com/teloxide/teloxide/issues/1154
teloxide = { version = "0.12.2", features = ["rustls", "macros"] }
directories = "5"
